turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: type mismatch;
 found   : Unit
 required: Int
	bouge(k,rule)
              ^